--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
-<head>Annie Sucks</head>
+<head></head>
+<title>Annie sucks</title>
 <body>
-What a loser.
+<p>Reasons to hate: </p>
+ 
+ <ol>
+ <li type="square">She's a loser</li>
+ <li type="circle">What a loser. </li>
+ <li type="disc">She sucks.</li>
+ </ol>
+
+<p>What a loser.</p>
 </body>
 </html>
